# telegram-server-webapi

./: .gitignore  Cargo.toml  Dockerfile  README.md
infrastructure/: main.yml
src/: config.rs  main.rs
src/database/: database.rs
src/routes/: health.rs
src/s3_handler/: mod.rs  s3_handler.rs
