[package]
name = "telegram-server-webapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
aws-config = "1.1.2"
aws-sdk-s3 = "1.12.0"
aws-sdk-dynamodb = "1.14.0"
chrono = "0.4.34"
chrono-tz = "0.8.6"

